--- a/payment.html
+++ b/payment.html
@@ -105,7 +105,8 @@ input,textarea{
   border-radius:12px;
   padding:10px;
   color:var(--text-main);
-  font-size:14px
+  font-size:14px;
+  transition: all 0.2s ease;
 }
 input:focus, textarea:focus {
   border-color: var(--gold);
