--- a/yourorders.html
+++ b/yourorders.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>My Orders — Hamsa Sarees</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 <link rel="icon" href="hamsasareeslogo.jpg" type="image/jpeg">
 
 <style>
@@ -33,6 +33,11 @@ html,body{
     linear-gradient(180deg,#080c18,#0a0e1a);
   color:var(--text-main);
 }
+/* ================= SCROLLBAR ================= */
+::-webkit-scrollbar { width: 8px; height: 8px; }
+::-webkit-scrollbar-track { background: var(--bg-main); }
+::-webkit-scrollbar-thumb { background: var(--border); border-radius: 4px; }
+::-webkit-scrollbar-thumb:hover { background: var(--text-muted); }
 .container{max-width:1200px;margin:auto;padding:20px 16px}
 header{
   display:flex;
@@ -40,10 +45,22 @@ header{
   gap:18px;
   padding:16px 18px;
   border-radius:16px;
-  background:linear-gradient(180deg,#12183a,#0f152e);
+  background: rgba(18, 24, 58, 0.6);
+  backdrop-filter: blur(12px);
   border:1px solid var(--border);
   box-shadow:0 20px 50px rgba(0,0,0,.45);
 }
+.header.sticky {
+  position: sticky;
+  top: 12px;
+  width: 100%;
+  z-index: 1000;
+  background: rgba(10, 14, 26, 0.75);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  animation: slideDown 0.3s ease-out;
+}
+@keyframes slideDown { from { transform: translateY(-100%); } to { transform: translateY(0); } }
 .brand{ display:flex; gap:12px; align-items:center; }
 .logo{ width:48px; height:48px; border-radius:12px; overflow:hidden; }
 .logo img { width: 100%; height: 100%; object-fit: cover; }
@@ -61,6 +78,7 @@ header{
   cursor:pointer;
   box-shadow:0 10px 30px rgba(230,181,102,.35);
   text-decoration: none;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 .btn-ghost{
   font-family:inherit;
@@ -71,34 +89,67 @@ header{
   border-radius:14px;
   cursor:pointer;
   text-decoration: none;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 .order-card{
-  background:linear-gradient(180deg,#18245a,#111a3d);
+  background: rgba(24, 36, 90, 0.4);
+  backdrop-filter: blur(5px);
   border:1px solid var(--border);
   border-radius:18px;
-  padding:16px;
-  margin-bottom:12px;
-  display:flex;
-  justify-content:space-between;
-  gap:16px;
+  padding:20px;
+  margin-bottom:16px;
+  display: grid;
+  grid-template-columns: 80px 1fr minmax(100px, auto);
+  gap: 20px;
   align-items: center;
+  animation: fadeIn 0.5s cubic-bezier(0.25, 0.8, 0.25, 1) backwards;
+  transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
 }
+.order-card:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+  border-color: rgba(255,255,255,0.15);
+}
+.order-card img { border-radius: 10px; width: 80px; height: 100px; object-fit: cover; }
 .order-info strong{display:block;font-size:16px;margin-bottom:6px}
-img{border-radius:10px}
+.order-status { text-align: right; }
 .modal{
   position:fixed;inset:0;display:none;
   background:rgba(5,8,15,.9);
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(8px);
   align-items:center;justify-content:center
 }
 .modal.show{display:flex}
+@keyframes fadeIn { from { opacity:0; transform:translateY(10px); } to { opacity:1; transform:translateY(0); } }
 .modal-box{
-  background:linear-gradient(180deg,#162051,#0f1533);
+  background: rgba(22, 32, 81, 0.95);
+  backdrop-filter: blur(16px);
   border:1px solid var(--border);
   border-radius:20px;
   padding:24px;
   max-width:700px;
   width:100%;
   box-shadow:0 40px 120px rgba(0,0,0,.7);
+  animation: modalPop 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+@keyframes modalPop { from { opacity: 0; transform: scale(0.95); } to { opacity: 1; transform: scale(1); } }
+.modal-box h2 { margin-top: 0; }
+.detail-grid { display: grid; grid-template-columns: 120px 1fr; gap: 8px 16px; font-size: 14px; }
+.detail-grid dt { font-weight: 600; color: var(--text-muted); }
+.detail-grid dd { margin: 0; color: var(--text-main); }
+.detail-grid .payment-id { word-break: break-all; }
+
+/* A simple toast notification */
+#toast{ 
+  position:fixed; 
+  bottom:20px; 
+  left:50%; 
+  transform:translateX(-50%); 
+  background:linear-gradient(90deg,var(--success),#59e4ab); 
+  color:#0a0e1a; 
+  padding:12px 24px; 
+  border-radius:12px; font-weight:800; z-index:9999; box-shadow:0 10px 30px rgba(0,0,0,.3); display:none; 
 }
 .spinner {
   width: 32px;
@@ -151,11 +202,11 @@ img{border-radius:10px}
   <div class="modal-box">
     <button id="closeModal" class="btn-ghost" style="float:right; font-size:12px; padding:6px 12px;">Close</button>
     <h2>Order Details</h2>
-    <pre id="orderDetails" class="small"></pre>
+    <div id="orderDetails" class="small"></div>
   </div>
 </div>
 
-<div id="toast" class="toast"></div>
+<div id="toast"></div>
 
 <footer style="text-align:center;padding:18px;color:#9fb8d9;font-size:13px;line-height:1.6;">
   ©2025 Hamsa Sarees, unauthorized use is strictly prohibited.<br>
@@ -163,6 +214,14 @@ img{border-radius:10px}
 </footer>
 
 <script type="module">
+// --- ✅ UI PERFECTION: Sticky Header ---
+window.addEventListener('scroll', () => {
+  const header = document.querySelector('header');
+  if (header) {
+    header.classList.toggle('sticky', window.scrollY > 20);
+  }
+});
+
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 import { getFirestore, collection, query, orderBy, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
@@ -184,6 +243,17 @@ const loginBtn = document.getElementById('loginBtn');
 const logoutBtn = document.getElementById('logoutBtn');
 const modal = document.getElementById('orderModal');
 const orderDetails = document.getElementById('orderDetails');
+const toastEl = document.getElementById('toast');
+
+function toast(msg){ 
+  if(!toastEl) return; 
+  toastEl.innerText = msg; 
+  toastEl.style.display = 'block'; 
+  setTimeout(()=> {
+    toastEl.style.display = 'none';
+    history.replaceState(null, '', location.pathname); // Clean URL
+  }, 3000); 
+}
 
 async function loadOrders(){
   if(!auth.currentUser) return;
@@ -205,49 +275,55 @@ async function loadOrders(){
 
   snap.forEach(d=>{
     const o = d.data();
+    const orderId = d.id;
+    const orderDate = o.createdAt?.toDate ? o.createdAt.toDate().toLocaleDateString('en-IN', { day: 'numeric', month: 'long', year: 'numeric' }) : 'N/A';
+
     const card = document.createElement('div');
     card.className = 'order-card';
+
+    // Store all data needed for the modal directly on the button
+    const fullOrderData = { ...o, id: orderId, formattedDate: orderDate };
+
     card.innerHTML = `
-      <div style="display:flex;gap:12px">
-        ${o.image ? `<img src="${o.image}" width="70" height="90" style="object-fit:cover;">` : ''}
-        <div class="order-info">
-          <strong>${o.product}</strong>
-          <div class="small">${o.name}</div>
-          <div class="small">₹${o.price}</div>
-        </div>
+      ${o.image ? `<img src="${o.image}" alt="${o.product}">` : '<div></div>'}
+      <div class="order-info">
+        <strong>${o.product}</strong>
+        <div class="small">Order Date: ${orderDate}</div>
+        <div class="small">Amount: ₹${o.price}</div>
       </div>
-      <div>
-        <button class="btn-ghost viewBtn" data-id="${d.id}" style="font-size:12px; padding:6px 12px;">View</button>
+      <div class="order-status">
+        <div class="small" style="color: var(--success); font-weight: 600;">${o.status || 'Processing'}</div>
+        <button class="btn-ghost viewBtn" data-order="${encodeURIComponent(JSON.stringify(fullOrderData))}" style="font-size:12px; padding:6px 12px; margin-top: 8px;">View Details</button>
       </div>
     `;
     ordersContainer.appendChild(card);
   });
 }
 
-ordersContainer.addEventListener('click', async e=>{
+ordersContainer.addEventListener('click', e => {
   const view = e.target.closest('.viewBtn');
   if(!view) return;
 
-  const uid = auth.currentUser.uid;
-  const id = view.dataset.id;
+  // ✅ PERFECTION: No more Firestore reads. Data is already on the button.
+  const o = JSON.parse(decodeURIComponent(view.dataset.order));
 
-  const snap = await getDocs(collection(db,`users/${uid}/orders`));
-  snap.forEach(d=>{
-    if(d.id===id){
-      const o=d.data();
-      orderDetails.textContent =
-`Product: ${o.product}
-Price: ₹${o.price}
-Name: ${o.name}
-Phone: ${o.phone}
-Address:
-${o.address}
-Payment ID:
-${o.paymentId}
-Status: ${o.status || 'Processing'}`;
-      modal.classList.add('show');
-    }
-  });
+  orderDetails.innerHTML = `
+    <dl class="detail-grid">
+      <dt>Order ID</dt>
+      <dd>${o.id}</dd>
+      <dt>Order Date</dt>
+      <dd>${o.formattedDate}</dd>
+      <dt>Product</dt>
+      <dd>${o.product}</dd>
+      <dt>Amount</dt>
+      <dd>₹${o.price}</dd>
+      <dt>Status</dt>
+      <dd style="color: var(--success); font-weight: 600;">${o.status || 'Processing'}</dd>
+      <dt>Payment ID</dt>
+      <dd class="payment-id">${o.paymentId}</dd>
+    </dl>
+  `;
+  modal.classList.add('show');
 });
 
 document.getElementById('closeModal').onclick=()=>modal.classList.remove('show');
@@ -268,6 +344,12 @@ onAuthStateChanged(auth,user=>{
     logoutBtn.style.display='none';
   }
 });
+
+// ✅ PERFECTION: Check for success status from payment page
+const urlParams = new URLSearchParams(window.location.search);
+if (urlParams.get('status') === 'success') {
+  toast('Payment successful! Your order has been placed.');
+}
 </script>
 
 </body>
