--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@ html,body{
 ::-webkit-scrollbar-thumb { background: var(--border); border-radius: 4px; }
 ::-webkit-scrollbar-thumb:hover { background: var(--gold); }
 
+/* ================= SELECTION ================= */
+::selection { background: var(--gold); color: #0a0e1a; }
+::-moz-selection { background: var(--gold); color: #0a0e1a; }
+
 /* ================= ANNOUNCEMENT BAR ================= */
 .announcement-bar {
   background: linear-gradient(90deg, #0f1738, #161e3d);
@@ -171,7 +175,7 @@ header{
 .search:focus-within {
   border-color: var(--gold);
   transform: scale(1.02);
-  box-shadow: 0 0 0 4px rgba(230, 181, 102, 0.15);
+  box-shadow: 0 0 0 2px var(--bg-main), 0 0 0 4px var(--gold);
 }
 
 .search input{
@@ -225,6 +229,9 @@ button,a{
 .btn:hover::after {
   left: 100%;
 }
+.btn:active {
+  transform: scale(0.96);
+}
 
 button:disabled, .btn:disabled {
   opacity: 0.6;
@@ -237,7 +244,7 @@ button:disabled, .btn:disabled {
 input:focus, textarea:focus, select:focus {
   border-color: var(--gold);
   outline: none;
-  box-shadow: 0 0 0 3px rgba(230,181,102,0.15);
+  box-shadow: 0 0 0 2px var(--bg-main), 0 0 0 4px rgba(230,181,102,0.6);
   transition: box-shadow 0.2s ease, border-color 0.2s ease;
 }
 
@@ -271,6 +278,9 @@ input.invalid, textarea.invalid {
   background:#18225a;
   transform: translateY(-2px);
   box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+}
+.btn-ghost:active {
+  transform: scale(0.96);
 }
 
 /* ================= HERO ================= */
@@ -635,8 +645,10 @@ h2 {
   visibility: hidden; opacity: 0;
   position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%) translateY(20px);
   background: linear-gradient(90deg,var(--gold),#f3d48c); color: #3b2b08;
-  padding: 12px 24px; border-radius: 12px; font-weight: 800;
+  padding: 12px 24px; border-radius: 50px; font-weight: 800;
   z-index: 9999; box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
 #toast.show { visibility: visible; opacity: 1; transform: translateX(-50%) translateY(0); }
@@ -819,7 +831,7 @@ h2 {
 </head>
 <body>
   <div class="announcement-bar">
-    <p>🎉 Free Shipping on all orders above ₹2000 | Authentic Handloom Direct from Weavers</p>
+    <p>Welcome to Hamsa Sarees</p>
   </div>
   <div class="container">
     <header>
@@ -827,7 +839,7 @@ h2 {
         <div class="logo" aria-hidden="true"><img src="hamsasareeslogo.jpg" alt="Hamsa Sarees Logo"></div>
         <div>
           <div class="title">Hamsa Sarees</div>
-          <div class="small">Jalakandapuram-636501<br>⚠ This Website is now under Construction ⚠</div>
+          <div class="small">Online Store<br>⚠ This Website is now under Construction ⚠</div>
         </div>
       </div>
 
@@ -858,66 +870,10 @@ h2 {
       <section class="hero">
         <div class="hero-card">
           <div class="hero-content">
-            <div class="badge-pill shimmer">Direct from Weaver</div>
+            <div class="badge-pill shimmer">Welcome</div>
             <h1>Hamsa Sarees</h1>
-            <p class="hero-desc">Experience the elegance of authentic handloom sarees. Crafted with passion in Jalakandapuram.</p>
-            <div class="hero-address">
-              <svg width="16" height="16" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
-              22/3, Tharamangalam Main Road, Jalakandapuram, Salem 636501
-            </div>
-            <a href="https://www.google.com/search?q=Hamsa+Sarees+,+Jalakandapuram" target="_blank" rel="noopener noreferrer" class="btn btn-icon">
-              <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M12 2C8.13 2 5 5.13 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.87-3.13-7-7-7zm0 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"/></svg>
-              <span>Locate Us on Google</span>
-            </a>
+            <p class="hero-desc">Discover our exclusive collection of sarees.</p>
           </div>
-        </div>
-      </section>
-
-      <!-- Featured Collections -->
-      <section class="collections-section reveal">
-        <h2 class="section-title">Curated Collections</h2>
-        <div class="collections-grid">
-          <div class="collection-card" onclick="document.getElementById('productGrid').scrollIntoView({behavior:'smooth'})">
-            <img src="https://images.unsplash.com/photo-1610030469983-98e550d6193c?q=80&w=800&auto=format&fit=crop" alt="Silk Sarees">
-            <div class="collection-overlay">
-              <h3>Silk Elegance</h3>
-              <span class="btn-text">Explore Collection <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12h14M12 5l7 7-7 7"/></svg></span>
-            </div>
-          </div>
-          <div class="collection-card" onclick="document.getElementById('productGrid').scrollIntoView({behavior:'smooth'})">
-            <img src="https://images.unsplash.com/photo-1583391726247-12b52ce06b61?q=80&w=800&auto=format&fit=crop" alt="Cotton Sarees">
-            <div class="collection-overlay">
-              <h3>Cotton Comfort</h3>
-              <span class="btn-text">Explore Collection <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12h14M12 5l7 7-7 7"/></svg></span>
-            </div>
-          </div>
-          <div class="collection-card" onclick="document.getElementById('productGrid').scrollIntoView({behavior:'smooth'})">
-            <img src="https://images.unsplash.com/photo-1617627143750-d86bc21e42bb?q=80&w=800&auto=format&fit=crop" alt="Bridal Collection">
-            <div class="collection-overlay">
-              <h3>Bridal Edit</h3>
-              <span class="btn-text">Explore Collection <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M5 12h14M12 5l7 7-7 7"/></svg></span>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Stats Section -->
-      <section class="stats-section reveal">
-        <div class="stat-item">
-          <span class="stat-number">5000+</span>
-          <span class="stat-label">Happy Customers</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-number">50+</span>
-          <span class="stat-label">Master Weavers</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-number">100%</span>
-          <span class="stat-label">Authentic Handloom</span>
-        </div>
-        <div class="stat-item">
-          <span class="stat-number">4.9</span>
-          <span class="stat-label">Average Rating</span>
         </div>
       </section>
 
@@ -957,53 +913,6 @@ h2 {
           <div class="card skeleton skeleton-card"></div>
           <div class="card skeleton skeleton-card"></div>
           <div class="card skeleton skeleton-card"></div>
-        </div>
-      </section>
-
-      <!-- Testimonials -->
-      <section class="testimonials-section reveal" style="margin-top:60px; margin-bottom:60px;">
-        <h2 class="section-title">What Our Customers Say</h2>
-        <div class="testimonials-scroll">
-          <div class="testimonial-card">
-            <p style="color:var(--text-muted); line-height:1.6; font-size:14px;">"The silk quality is absolutely stunning. It feels so authentic and the colors are vibrant. Will definitely buy again!"</p>
-            <div class="t-user">
-              <div class="t-avatar">P</div>
-              <div><div style="font-weight:700; font-size:14px;">Priya S.</div><div style="color:var(--gold); font-size:12px;">★★★★★</div></div>
-            </div>
-          </div>
-          <div class="testimonial-card">
-            <p style="color:var(--text-muted); line-height:1.6; font-size:14px;">"Ordered a cotton saree for my mother. She loved the texture and the traditional design. Fast delivery too."</p>
-            <div class="t-user">
-              <div class="t-avatar">A</div>
-              <div><div style="font-weight:700; font-size:14px;">Anjali M.</div><div style="color:var(--gold); font-size:12px;">★★★★★</div></div>
-            </div>
-          </div>
-          <div class="testimonial-card">
-            <p style="color:var(--text-muted); line-height:1.6; font-size:14px;">"Best place to buy handloom sarees. The direct-from-weaver concept ensures we get the best price and quality."</p>
-            <div class="t-user">
-              <div class="t-avatar">R</div>
-              <div><div style="font-weight:700; font-size:14px;">Ramesh K.</div><div style="color:var(--gold); font-size:12px;">★★★★★</div></div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- FAQ -->
-      <section class="faq-section reveal" style="margin-bottom:60px;">
-        <h2 class="section-title" style="display:block; text-align:center;">Frequently Asked Questions</h2>
-        <div class="faq-grid">
-          <div class="faq-item">
-            <button class="faq-question">Do you ship internationally? <svg class="faq-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg></button>
-            <div class="faq-answer">Yes, we ship worldwide! Shipping charges will be calculated at checkout based on your location.</div>
-          </div>
-          <div class="faq-item">
-            <button class="faq-question">Are these authentic handloom sarees? <svg class="faq-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg></button>
-            <div class="faq-answer">Absolutely. Every saree is directly sourced from the weavers of Jalakandapuram, ensuring 100% authenticity and quality.</div>
-          </div>
-          <div class="faq-item">
-            <button class="faq-question">What is your return policy? <svg class="faq-icon" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M6 9l6 6 6-6"/></svg></button>
-            <div class="faq-answer">We accept returns within 7 days of delivery if the product is damaged or defective. Please contact support for assistance.</div>
-          </div>
         </div>
       </section>
 
@@ -2825,7 +2734,7 @@ productGrid.addEventListener('click', ev=>{
     <div class="footer-grid">
       <div class="footer-col">
         <h4>Hamsa Sarees</h4>
-        <p class="small" style="line-height:1.6; margin-bottom:20px;">Authentic handloom sarees directly from the weavers of Jalakandapuram. Quality and tradition in every thread.</p>
+        <p class="small" style="line-height:1.6; margin-bottom:20px;">Quality and tradition in every thread.</p>
         <div class="social-icons">
           <a href="#" class="social-icon" aria-label="Instagram"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg></a>
           <a href="#" class="social-icon" aria-label="Facebook"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path></svg></a>
