--- a/yourorders.html
+++ b/yourorders.html
@@ -38,33 +38,30 @@ html,body{
 ::-webkit-scrollbar-track { background: var(--bg-main); }
 ::-webkit-scrollbar-thumb { background: var(--border); border-radius: 4px; }
 ::-webkit-scrollbar-thumb:hover { background: var(--text-muted); }
-.container{max-width:1200px;margin:auto;padding:20px 16px}
+/* ================= SELECTION ================= */
+::selection { background: var(--gold); color: #0a0e1a; }
+::-moz-selection { background: var(--gold); color: #0a0e1a; }
+::placeholder { color: var(--text-muted); opacity: 0.6; }
+.bg-noise { position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 0; opacity: 0.04; background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E"); }
+.container{position: relative; z-index: 1; max-width:1200px;margin:auto;padding:20px 16px}
 header{
   display:flex;
   align-items:center;
   gap:18px;
   padding:16px 18px;
   border-radius:16px;
-  background: rgba(18, 24, 58, 0.6);
+  background: rgba(255, 255, 255, 0.03);
   backdrop-filter: blur(12px);
-  border:1px solid var(--border);
-  box-shadow:0 20px 50px rgba(0,0,0,.45);
+  border:1px solid rgba(255,255,255,0.05);
+  box-shadow:0 20px 50px rgba(0,0,0,0.3);
 }
-.header.sticky {
-  position: sticky;
-  top: 12px;
-  width: 100%;
-  z-index: 1000;
-  background: rgba(10, 14, 26, 0.75);
-  backdrop-filter: blur(10px);
-  -webkit-backdrop-filter: blur(10px);
-  animation: slideDown 0.3s ease-out;
+@media(max-width:768px){
+  header{flex-direction:column; gap: 16px;}
 }
-@keyframes slideDown { from { transform: translateY(-100%); } to { transform: translateY(0); } }
-.brand{ display:flex; gap:12px; align-items:center; }
-.logo{ width:48px; height:48px; border-radius:12px; overflow:hidden; }
+.brand{ display:flex; gap:14px; align-items:center; }
+.logo{ width:52px; height:52px; border-radius:14px; overflow:hidden; border: 1px solid rgba(255,255,255,0.1); box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0; }
 .logo img { width: 100%; height: 100%; object-fit: cover; }
-.title{ font-weight:800; font-size:16px; }
+.title{ font-weight:800; font-size:18px; letter-spacing: -0.01em; line-height: 1.2; }
 .small{ font-size:13px; color:var(--text-muted); }
 .actions{display:flex;gap:8px;align-items:center}
 .btn{
@@ -80,6 +77,9 @@ header{
   text-decoration: none;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+.btn:active {
+  transform: scale(0.96);
+}
 .btn-ghost{
   font-family:inherit;
   background:#0f1738;
@@ -91,10 +91,13 @@ header{
   text-decoration: none;
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+.btn-ghost:active {
+  transform: scale(0.96);
+}
 .order-card{
-  background: rgba(24, 36, 90, 0.4);
-  backdrop-filter: blur(5px);
-  border:1px solid var(--border);
+  background: rgba(255, 255, 255, 0.02);
+  backdrop-filter: blur(10px);
+  border:1px solid rgba(255,255,255,0.05);
   border-radius:18px;
   padding:20px;
   margin-bottom:16px;
@@ -106,9 +109,9 @@ header{
   transition: transform 0.2s ease, box-shadow 0.2s ease, border-color 0.2s ease;
 }
 .order-card:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-  border-color: rgba(255,255,255,0.15);
+  transform: translateY(-4px);
+  box-shadow: 0 15px 30px rgba(0,0,0,0.25);
+  border-color: rgba(230, 181, 102, 0.4);
 }
 .order-card img { border-radius: 10px; width: 80px; height: 100px; object-fit: cover; }
 .order-info strong{display:block;font-size:16px;margin-bottom:6px}
@@ -141,16 +144,18 @@ header{
 .detail-grid .payment-id { word-break: break-all; }
 
 /* A simple toast notification */
-#toast{ 
-  position:fixed; 
-  bottom:20px; 
-  left:50%; 
-  transform:translateX(-50%); 
-  background:linear-gradient(90deg,var(--success),#59e4ab); 
-  color:#0a0e1a; 
-  padding:12px 24px; 
-  border-radius:12px; font-weight:800; z-index:9999; box-shadow:0 10px 30px rgba(0,0,0,.3); display:none; 
+#toast {
+  visibility: hidden; opacity: 0;
+  position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%) translateY(20px);
+  background: linear-gradient(90deg,var(--success),#59e4ab); color: #0a0e1a;
+  padding: 12px 24px; border-radius: 50px; font-weight: 800;
+  z-index: 9999; box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+#toast.show { visibility: visible; opacity: 1; transform: translateX(-50%) translateY(0); }
+
 .spinner {
   width: 32px;
   height: 32px;
@@ -165,6 +170,7 @@ header{
 </head>
 
 <body>
+<div class="bg-noise"></div>
 <div class="container">
   <header>
     <div class="brand">
@@ -214,14 +220,6 @@ header{
 </footer>
 
 <script type="module">
-// --- ✅ UI PERFECTION: Sticky Header ---
-window.addEventListener('scroll', () => {
-  const header = document.querySelector('header');
-  if (header) {
-    header.classList.toggle('sticky', window.scrollY > 20);
-  }
-});
-
 import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
 import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 import { getFirestore, collection, query, orderBy, getDocs } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
@@ -248,11 +246,8 @@ const toastEl = document.getElementById('toast');
 function toast(msg){ 
   if(!toastEl) return; 
   toastEl.innerText = msg; 
-  toastEl.style.display = 'block'; 
-  setTimeout(()=> {
-    toastEl.style.display = 'none';
-    history.replaceState(null, '', location.pathname); // Clean URL
-  }, 3000); 
+  toastEl.classList.add('show'); 
+  setTimeout(()=> toastEl.classList.remove('show'), 3000); 
 }
 
 async function loadOrders(){
@@ -273,6 +268,7 @@ async function loadOrders(){
 
   ordersContainer.innerHTML = '';
 
+  const fragment = document.createDocumentFragment();
   snap.forEach(d=>{
     const o = d.data();
     const orderId = d.id;
@@ -296,8 +292,9 @@ async function loadOrders(){
         <button class="btn-ghost viewBtn" data-order="${encodeURIComponent(JSON.stringify(fullOrderData))}" style="font-size:12px; padding:6px 12px; margin-top: 8px;">View Details</button>
       </div>
     `;
-    ordersContainer.appendChild(card);
+    fragment.appendChild(card);
   });
+  ordersContainer.appendChild(fragment);
 }
 
 ordersContainer.addEventListener('click', e => {
@@ -349,6 +346,7 @@ onAuthStateChanged(auth,user=>{
 const urlParams = new URLSearchParams(window.location.search);
 if (urlParams.get('status') === 'success') {
   toast('Payment successful! Your order has been placed.');
+  history.replaceState(null, '', location.pathname); // Clean URL
 }
 </script>
 
