--- a/payment.html
+++ b/payment.html
@@ -74,7 +74,8 @@ header{
   box-shadow:0 20px 50px rgba(0,0,0,0.3);
 }
 .brand{ display:flex; gap:14px; align-items:center; }
-.logo{ width:52px; height:52px; border-radius:14px; overflow:hidden; border: 1px solid rgba(255,255,255,0.1); box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0; }
+.logo{ width:52px; height:52px; border-radius:14px; overflow:hidden; border: 1px solid rgba(255,255,255,0.1); box-shadow: 0 4px 10px rgba(0,0,0,0.2); flex-shrink: 0; transition: transform 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease; }
+.logo:hover { transform: scale(1.05); box-shadow: 0 8px 20px rgba(230, 181, 102, 0.2); border-color: var(--gold); }
 .logo img { width: 100%; height: 100%; object-fit: cover; }
 .title{ font-weight:800; font-size:18px; letter-spacing: -0.01em; line-height: 1.2; }
 .small{ font-size:13px; color:var(--text-muted); }
@@ -160,7 +161,7 @@ button:disabled{
   box-shadow: none;
   transform: none !important;
 }
-img{
+#productImg{
   max-width:100%;
   max-height:260px;
   object-fit:cover;
