--- a/index.html
+++ b/index.html
@@ -162,6 +162,10 @@ header{
   letter-spacing: -0.01em;
   font-size:18px;
   line-height: 1.2;
+  background: linear-gradient(90deg, #fff, #e6b566);
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .small{
@@ -210,7 +214,8 @@ button,a{
 }
 
 .btn{
-  background:linear-gradient(135deg,var(--gold),#cfa34e);
+  background:linear-gradient(135deg,var(--gold),#cfa34e,var(--gold));
+  background-size: 200% 100%;
   color:#3b2b08;
   border:none;
   padding:10px 18px;
@@ -218,8 +223,8 @@ button,a{
   font-weight:800;
   cursor:pointer;
   text-decoration: none;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
-  box-shadow:0 10px 30px rgba(230,181,102,.35);
+  transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow:0 4px 15px rgba(230,181,102,0.3);
   position: relative;
   overflow: hidden;
 }
@@ -229,7 +234,7 @@ button,a{
   position: absolute;
   top: 0; left: -100%; width: 100%; height: 100%;
   background: linear-gradient(90deg, transparent, rgba(255,255,255,0.2), transparent);
-  transition: 0.5s;
+  transition: 0.6s ease-in-out;
 }
 .btn-icon {
   display: inline-flex;
@@ -272,7 +277,8 @@ input.invalid, textarea.invalid {
 
 .btn:hover{
   transform: translateY(-2px);
-  box-shadow: 0 15px 35px rgba(230, 181, 102, 0.4);
+  box-shadow: 0 8px 25px rgba(230, 181, 102, 0.5);
+  background-position: 100% 0;
 }
 
 .btn-ghost{
@@ -372,7 +378,7 @@ input.invalid, textarea.invalid {
   border-radius:18px;
   padding:12px;
   cursor:pointer;
-  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  transition: transform 0.3s ease, background 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease;
   box-shadow:0 10px 30px rgba(0,0,0,0.2);
   display: flex;
   flex-direction: column;
@@ -383,9 +389,9 @@ input.invalid, textarea.invalid {
 
 .card:hover{
   transform: translateY(-5px);
-  background: rgba(255, 255, 255, 0.05);
-  box-shadow: 0 20px 40px rgba(0,0,0,0.3);
-  border-color: rgba(230, 181, 102, 0.3);
+  background: rgba(255, 255, 255, 0.06);
+  box-shadow: 0 20px 40px rgba(0,0,0,0.4), inset 0 0 0 1px rgba(255,255,255,0.05);
+  border-color: rgba(230, 181, 102, 0.5);
 }
 
 /* Hover Overlay for Image */
@@ -459,27 +465,6 @@ input.invalid, textarea.invalid {
 .card:hover .imgwrap img.secondary-img {
   opacity: 1;
 }
-
-/* TAG */
-.tag{
-  position:absolute;
-  top:10px;
-  left:10px;
-  z-index:5;
-  padding:5px 12px;
-  background: rgba(15, 23, 56, 0.85);
-  backdrop-filter: blur(4px);
-  border: 1px solid var(--gold);
-  color: var(--gold);
-  font-size:11px;
-  font-weight:700;
-  border-radius:6px;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  pointer-events:none;
-  transform:translateZ(0);
-}
-
 
 /* TEXT */
 .card h3{
@@ -898,17 +883,37 @@ h2 {
 .qf-chip {
   background: rgba(255,255,255,0.03); border: 1px solid var(--border);
   padding: 8px 20px; border-radius: 30px; white-space: nowrap;
-  font-size: 13px; font-weight: 600; color: var(--text-muted);
+  font-size: 13px; font-weight: 500; color: var(--text-muted);
   cursor: pointer; transition: all 0.3s ease; flex-shrink: 0;
   user-select: none;
 }
-.qf-chip:hover { background: rgba(255,255,255,0.08); color: var(--text-main); transform: translateY(-2px); }
+.qf-chip:hover { background: rgba(255,255,255,0.08); color: var(--text-main); transform: translateY(-2px); border-color: rgba(255,255,255,0.2); }
 .qf-chip.active { background: var(--gold); color: #0a0e1a; border-color: var(--gold); box-shadow: 0 4px 15px rgba(230, 181, 102, 0.3); font-weight: 700; }
 
 /* ================= CARD SWATCHES ================= */
 .card-swatches { display: flex; gap: 6px; margin-top: 10px; align-items: center; min-height: 14px; }
 .card-swatch { width: 12px; height: 12px; border-radius: 50%; border: 1px solid rgba(255,255,255,0.3); position: relative; transition: transform 0.2s; }
 .card-swatch:hover { transform: scale(1.3); border-color: var(--gold); z-index: 2; }
+
+/* ================= TRUST STRIP ================= */
+.trust-section {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
+  gap: 16px;
+  margin-bottom: 40px;
+}
+.trust-item {
+  background: rgba(255,255,255,0.02);
+  border: 1px solid var(--border);
+  padding: 20px;
+  border-radius: 16px;
+  text-align: center;
+  display: flex; flex-direction: column; align-items: center; gap: 8px;
+  transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  backdrop-filter: blur(5px);
+}
+.trust-item:hover { transform: translateY(-5px); border-color: var(--gold); background: rgba(255,255,255,0.05); box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
+.trust-item svg { margin-bottom: 4px; filter: drop-shadow(0 0 8px rgba(230, 181, 102, 0.3)); }
 
 /* ================= UI POLISH ================= */
 .bg-noise {
@@ -985,6 +990,30 @@ h2 {
               <span>Locate Us on Google</span>
             </a>
           </div>
+        </div>
+      </section>
+
+      <!-- Trust Strip -->
+      <section class="trust-section reveal">
+        <div class="trust-item">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="var(--gold)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="1" y="3" width="15" height="13"></rect><polygon points="16 8 20 8 23 11 23 16 16 16 16 8"></polygon><circle cx="5.5" cy="18.5" r="2.5"></circle><circle cx="18.5" cy="18.5" r="2.5"></circle></svg>
+          <span class="small" style="font-weight:700;color:var(--text-main)">Free Shipping</span>
+          <span class="small" style="font-size:11px;color:var(--text-muted)">On orders above ₹2000</span>
+        </div>
+        <div class="trust-item">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="var(--gold)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg>
+          <span class="small" style="font-weight:700;color:var(--text-main)">Secure Payment</span>
+          <span class="small" style="font-size:11px;color:var(--text-muted)">100% Secure Checkout</span>
+        </div>
+        <div class="trust-item">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="var(--gold)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M20.59 13.41l-7.17 7.17a2 2 0 0 1-2.83 0L2 12V2h10l8.59 8.59a2 2 0 0 1 0 2.82z"></path><line x1="7" y1="7" x2="7.01" y2="7"></line></svg>
+          <span class="small" style="font-weight:700;color:var(--text-main)">Best Prices</span>
+          <span class="small" style="font-size:11px;color:var(--text-muted)">Direct from Weavers</span>
+        </div>
+        <div class="trust-item">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="var(--gold)" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 2l3.09 6.26L22 9.27l-5 4.87 1.18 6.88L12 17.77l-6.18 3.25L7 14.14 2 9.27l6.91-1.01L12 2z"></path></svg>
+          <span class="small" style="font-weight:700;color:var(--text-main)">Top Quality</span>
+          <span class="small" style="font-size:11px;color:var(--text-muted)">Handpicked Sarees</span>
         </div>
       </section>
 
@@ -1837,7 +1866,6 @@ productGrid.addEventListener('click', e => {
       const data = docSnap.data() || {};
       const title = data.title || 'Untitled';
       const createdAt = data.createdAt;
-      const tag = data.tag || '';
       // Use the 'images' array if it exists, otherwise fall back to 'img'.
       const images = data.images && data.images.length > 0 ? data.images : [data.img];
       const primaryImage = images[0] || 'https://images.unsplash.com/photo-1520975918016-4d0b5b0b2f3d?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder';
@@ -2855,7 +2883,7 @@ productGrid.addEventListener('click', ev=>{
     });
 
     // Initialize reveal on static elements
-    document.querySelectorAll('.hero-card, .filter-section, .section-title, .collections-section, .stats-section, .testimonials-section, .faq-section').forEach(el => {
+    document.querySelectorAll('.hero-card, .trust-section, .filter-section, .section-title, .collections-section, .stats-section, .testimonials-section, .faq-section').forEach(el => {
       el.classList.add('reveal');
       revealObserver.observe(el);
     });
