--- a/yourorders.html
+++ b/yourorders.html
@@ -194,7 +194,7 @@ header{
   <main>
     <div style="background:var(--bg-soft); border:1px solid var(--border); border-radius:16px; padding:16px; margin: 22px 0; display:flex; justify-content:space-between; align-items:center; flex-wrap:wrap; gap:12px;">
       <h3 style="margin:0;">For order cancellations, please contact us on WhatsApp.</h3>
-      <a href="https://whatsapp.com/channel/0029Vb7MNNbDZ4LcXUZoSz2y" target="_blank" rel="noopener noreferrer" class="btn">
+      <a href=""https://wa.me/9994051579" target="_blank" rel="noopener noreferrer" class="btn">
         Contact Support
       </a>
     </div>
