--- a/hamsasarees link.html
+++ b/hamsasarees link.html
@@ -1,1 +1,1 @@
-<html><a href="hamsasarees.github.io/hamsasarees/" download="hamsasarees.github.io/hamsasarees/">hamsasarees</a></html>
+<html><a href="hamsasarees.github.io/hamsasarees/">hamsasarees</a></html>
